force-app/main/default/objects/AVO_Withdrawals__c/AVO_Withdrawals__c.object-meta.xml
<CustomObject>
    <label>Withdrawals</label>
    <nameField>
        <label>Withdrawals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Withdrawals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>