force-app/main/default/objects/AVO_Withdrawals__c/fields/APM__c.field-meta.xml
<CustomField>
    <fullName>APM__c</fullName>
    <label>APM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>