force-app/main/default/objects/AVO_Withdrawals__c/fields/App_ID__c.field-meta.xml
<CustomField>
    <fullName>App_ID__c</fullName>
    <label>Application ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>