force-app/main/default/objects/AVO_Withdrawals__c/fields/Autonumber__c.field-meta.xml
<CustomField>
    <fullName>Autonumber__c</fullName>
    <label>Autonumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>