force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_2012_Suspension_Areas__c.field-meta.xml
<CustomField>
    <fullName>AVO_2012_Suspension_Areas__c</fullName>
    <description>Indicates if the withdrawal is in the suspension area and whether it is the &quot;GW &amp; SW&quot; or &quot;SW Only&quot; suspension areas, there are the only two values in field, if not in suspension area then it is null.</description>
    <label>2012 Suspension Areas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>