force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_AGGWD_UNIQUE__c.field-meta.xml
<CustomField>
    <fullName>AVO_AGGWD_UNIQUE__c</fullName>
    <label>AGGWD UNIQUE</label>
    <length>80</length>
    <type>Text</type>
</CustomField>