force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_AGSWD_UNIQUE__c.field-meta.xml
<CustomField>
    <fullName>AVO_AGSWD_UNIQUE__c</fullName>
    <label>AGSWD UNIQUE</label>
    <length>80</length>
    <type>Text</type>
</CustomField>