force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Aquifer_ID__c.field-meta.xml
<CustomField>
    <fullName>AVO_Aquifer_ID__c</fullName>
    <description>Aquifer of Water Withdrawal from the Well</description>
    <label>Aquifer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_Aquifers</valueSetName>
    </valueSet>
</CustomField>