force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_ARPAFunded__c.field-meta.xml
<CustomField>
    <fullName>AVO_ARPAFunded__c</fullName>
    <description>Is this Well ARPA Funded</description>
    <label>ARPA Funded</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_YesNo</valueSetName>
    </valueSet>
</CustomField>