force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_August__c.field-meta.xml
<CustomField>
    <fullName>AVO_August__c</fullName>
    <label>August</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>