force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_AVO_DateInsCompletDateInsCompleted_C__c.field-meta.xml
<CustomField>
    <fullName>AVO_AVO_DateInsCompletDateInsCompleted_C__c</fullName>
    <label>Well Inspection Completed</label>
    <type>DateTime</type>
</CustomField>