force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Casing_ft__c.field-meta.xml
<CustomField>
    <fullName>AVO_Casing_ft__c</fullName>
    <label>Casing Depth (ft)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>