force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Check_if_comes_from_repeater__c.field-meta.xml
<CustomField>
    <fullName>AVO_Check_if_comes_from_repeater__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check if comes from repeater</label>
    <type>Checkbox</type>
</CustomField>