force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Coastal_Conservation_Region__c.field-meta.xml
<CustomField>
    <fullName>AVO_Coastal_Conservation_Region__c</fullName>
    <description>Indicates which coastal conservation region the withdrawal is in or if it is not in any.</description>
    <label>Coastal Conservation Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>