force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Critical_LOC__c.field-meta.xml
<CustomField>
    <fullName>AVO_Critical_LOC__c</fullName>
    <label>Special Condition Critical LOC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>