force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Critical_Stream_Buffer__c.field-meta.xml
<CustomField>
    <fullName>AVO_Critical_Stream_Buffer__c</fullName>
    <description>If field indicates &quot;CriStrBuf&quot; in the field then the withdrawal is in the Critical Stream 1/2 mile buffer zone.</description>
    <label>Critical Stream Buffer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>