force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Current_Record__c.field-meta.xml
<CustomField>
    <fullName>AVO_Current_Record__c</fullName>
    <label>Current Record</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_YesNo</valueSetName>
    </valueSet>
</CustomField>