force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Dark_Green_Area__c.field-meta.xml
<CustomField>
    <fullName>AVO_Dark_Green_Area__c</fullName>
    <description>Indicates if the withdrawal is in the Dark Green Conservation Zone</description>
    <label>Dark Green Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>