force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Date_Installed__c.field-meta.xml
<CustomField>
    <fullName>AVO_Date_Installed__c</fullName>
    <label>Installation Date</label>
    <type>DateTime</type>
</CustomField>