force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_DateReplaced__c.field-meta.xml
<CustomField>
    <fullName>AVO_DateReplaced__c</fullName>
    <label>Date Well Replaced</label>
    <type>DateTime</type>
</CustomField>