force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_FRBP_Conservation_Area__c.field-meta.xml
<CustomField>
    <fullName>AVO_FRBP_Conservation_Area__c</fullName>
    <description>Indicates which FRBP conservation area the withdrawal is in or if it is not in any.</description>
    <label>FRBP Conservation Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>