force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_From_Revision__c.field-meta.xml
<CustomField>
    <fullName>AVO_From_Revision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Revision</label>
    <type>Checkbox</type>
</CustomField>