force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Gauge_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Gauge_Type__c</fullName>
    <label>Type of Stream Gauge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Well Installed To Protect Flow Requirements</fullName>
            </value>
            <value>
                <fullName>Weir Method</fullName>
            </value>
            <value>
                <fullName>Weir Method &amp; Staff Gauge</fullName>
            </value>
            <value>
                <fullName>USGS Stream Gauge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>