force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_GIS_UNIQUE__c.field-meta.xml
<CustomField>
    <fullName>AVO_GIS_UNIQUE__c</fullName>
    <description>Unique Identifier for the table.</description>
    <label>GIS Unique ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>