force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_GISDateMapped__c.field-meta.xml
<CustomField>
    <fullName>AVO_GISDateMapped__c</fullName>
    <label>Date of GIS Mapping</label>
    <type>DateTime</type>
</CustomField>