force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_GISMappedBy__c.field-meta.xml
<CustomField>
    <fullName>AVO_GISMappedBy__c</fullName>
    <label>GIS Mapped By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>