force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_GISRemapSubmittedBy__c.field-meta.xml
<CustomField>
    <fullName>AVO_GISRemapSubmittedBy__c</fullName>
    <label>GISRemapSubmittedBy</label>
    <length>80</length>
    <type>Text</type>
</CustomField>