force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_GISREmapSubmittedDate__c.field-meta.xml
<CustomField>
    <fullName>AVO_GISREmapSubmittedDate__c</fullName>
    <label>GISREmapSubmittedDate</label>
    <type>DateTime</type>
</CustomField>