force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_GW_Gallons_Per_Minute__c.field-meta.xml
<CustomField>
    <fullName>AVO_GW_Gallons_Per_Minute__c</fullName>
    <label>GW Gallons Per Minute</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>