force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_GwAppliedDt__c.field-meta.xml
<CustomField>
    <fullName>AVO_GwAppliedDt__c</fullName>
    <label>GW Withdrawal Applied Date</label>
    <type>DateTime</type>
</CustomField>