force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_GwApprovedDt__c.field-meta.xml
<CustomField>
    <fullName>AVO_GwApprovedDt__c</fullName>
    <label>GW Withdrawal Approved Date</label>
    <type>DateTime</type>
</CustomField>