force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Inactive__c.field-meta.xml
<CustomField>
    <fullName>AVO_Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>