force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Installer_ID__c.field-meta.xml
<CustomField>
    <fullName>AVO_Installer_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Well Contractor/Driller Contact ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Withdrawals (Installer ID)</relationshipLabel>
    <relationshipName>Withdrawals1</relationshipName>
    <type>Lookup</type>
</CustomField>