force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_InstallerID__c.field-meta.xml
<CustomField>
    <fullName>AVO_InstallerID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>InstallerID</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Contact.sog_Contact_Type__c</field>
            <operation>equals</operation>
            <value>Well Contractor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Withdrawals (InstallerID)</relationshipLabel>
    <relationshipName>Withdrawals</relationshipName>
    <type>Lookup</type>
</CustomField>