force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Intake_ft__c.field-meta.xml
<CustomField>
    <fullName>AVO_Intake_ft__c</fullName>
    <label>Pump Intake Depth (ft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>