force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_LFP_Monitor__c.field-meta.xml
<CustomField>
    <fullName>AVO_LFP_Monitor__c</fullName>
    <label>LF Monitor Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pond Outflow</fullName>
            </value>
            <value>
                <fullName>Immediate Upstream of Withdrawal</fullName>
            </value>
            <value>
                <fullName>End of Affected Stream Segment</fullName>
            </value>
            <value>
                <fullName>Nearest USGS gauge</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>