force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_LFP_Notify__c.field-meta.xml
<CustomField>
    <fullName>AVO_LFP_Notify__c</fullName>
    <label>LF Monitor Notify</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permittee and EPD</fullName>
            </value>
            <value>
                <fullName>Permittee</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>