force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_LFP_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_LFP_Type__c</fullName>
    <label>LF Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7Q10</fullName>
            </value>
            <value>
                <fullName>25% AAD</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>