force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_LOCAppDate__c.field-meta.xml
<CustomField>
    <fullName>AVO_LOCAppDate__c</fullName>
    <label>LOC Applied Date</label>
    <type>DateTime</type>
</CustomField>