force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_LOCExpDate__c.field-meta.xml
<CustomField>
    <fullName>AVO_LOCExpDate__c</fullName>
    <description>of Concurrence Expiration date for this well</description>
    <label>LOC Expire Date for the Withdrawal</label>
    <type>Date</type>
</CustomField>