force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_LOCIssDate__c.field-meta.xml
<CustomField>
    <fullName>AVO_LOCIssDate__c</fullName>
    <description>Lotter of Concurrence Issue date for this well</description>
    <label>LOC Issue date for the Withdrawal</label>
    <type>Date</type>
</CustomField>