force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Low_Flow_cfs__c.field-meta.xml
<CustomField>
    <fullName>AVO_Low_Flow_cfs__c</fullName>
    <label>Low Flow cfs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>