force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Low_Flow_Information__c.field-meta.xml
<CustomField>
    <fullName>AVO_Low_Flow_Information__c</fullName>
    <label>Low Flow Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>