force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Low_Flow_Plan_On_File_Yes_No__c.field-meta.xml
<CustomField>
    <fullName>AVO_Low_Flow_Plan_On_File_Yes_No__c</fullName>
    <label>Low Flow Plan On File Yes/No</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>