force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Maximum_Pumping_Capacity_GPM__c.field-meta.xml
<CustomField>
    <fullName>AVO_Maximum_Pumping_Capacity_GPM__c</fullName>
    <label>Maximum Pumping Capacity GPM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>