force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Permit_gpm__c.field-meta.xml
<CustomField>
    <fullName>AVO_Permit_gpm__c</fullName>
    <label>SW Gallons Per Minute</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>