force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Permit_No__c.field-meta.xml
<CustomField>
    <fullName>AVO_Permit_No__c</fullName>
    <label>Permit Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>