force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Planned_Date_of_Installation__c.field-meta.xml
<CustomField>
    <fullName>AVO_Planned_Date_of_Installation__c</fullName>
    <label>Planned Date of Pump/Well Installation</label>
    <type>Date</type>
</CustomField>