force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Pond_at_Headwaters__c.field-meta.xml
<CustomField>
    <fullName>AVO_Pond_at_Headwaters__c</fullName>
    <label>Pond at Headwaters</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_YesNo</valueSetName>
    </valueSet>
</CustomField>