force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Pond_Volume__c.field-meta.xml
<CustomField>
    <fullName>AVO_Pond_Volume__c</fullName>
    <inlineHelpText>What is the Volume of water your pond can hold? (Surface Acres * Average Depth in Acre/feet)</inlineHelpText>
    <label>Pond Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>