force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_PondAcres__c.field-meta.xml
<CustomField>
    <fullName>AVO_PondAcres__c</fullName>
    <inlineHelpText>How many surface acres is your pond? (acres)</inlineHelpText>
    <label>Pond Acres</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>