force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_PondDepth__c.field-meta.xml
<CustomField>
    <fullName>AVO_PondDepth__c</fullName>
    <inlineHelpText>What is the average depth of your Pond? (ft)</inlineHelpText>
    <label>Pond Depth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>