force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Priority_Zone__c.field-meta.xml
<CustomField>
    <fullName>AVO_Priority_Zone__c</fullName>
    <description>Indicates which conservation priority zone the withdrawal is in.</description>
    <label>Priority Zone</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>