force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Pump_Activity_Use__c.field-meta.xml
<CustomField>
    <fullName>AVO_Pump_Activity_Use__c</fullName>
    <label>Pump Activity Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Undocumented</fullName>
            </value>
            <value>
                <fullName>Unused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>