force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Pump_Source__c.field-meta.xml
<CustomField>
    <fullName>AVO_Pump_Source__c</fullName>
    <inlineHelpText>Please indicate the source(s) that you plan to pump from</inlineHelpText>
    <label>Pump Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stream, creek, river or canal/ditch connected to that flowing water</fullName>
            </value>
            <value>
                <fullName>Shared Pond, Lake or Reservoir not entirely on your property</fullName>
            </value>
            <value>
                <fullName>Pond or Reservoir lying on your property</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>