force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Pump_Status__c.field-meta.xml
<CustomField>
    <fullName>AVO_Pump_Status__c</fullName>
    <label>Pump Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UNDOCUMENTED</fullName>
            </value>
            <value>
                <fullName>PENDING PUMP</fullName>
            </value>
            <value>
                <fullName>ACTIVE PUMP</fullName>
            </value>
            <value>
                <fullName>DORMANT</fullName>
            </value>
            <value>
                <fullName>NEVER INSTALLED</fullName>
            </value>
            <value>
                <fullName>NO AG PERMIT NEEDED</fullName>
            </value>
            <value>
                <fullName>PERMIT/APP CONSOLIDATED</fullName>
            </value>
            <value>
                <fullName>UNDOCUMENTED CONSOLIDATED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>