force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_PumpDataOnFile__c.field-meta.xml
<CustomField>
    <fullName>AVO_PumpDataOnFile__c</fullName>
    <label>SW Pump Data On File</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>