force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_PumpInstallType__c.field-meta.xml
<CustomField>
    <fullName>AVO_PumpInstallType__c</fullName>
    <label>SW Pump Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vertical Turbine</fullName>
            </value>
            <value>
                <fullName>Submersible</fullName>
            </value>
            <value>
                <fullName>Centrifugal</fullName>
            </value>
            <value>
                <fullName>Gear head</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>