force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_PumpNumber__c.field-meta.xml
<CustomField>
    <fullName>AVO_PumpNumber__c</fullName>
    <label>SW Pump Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>