force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_PumpVettedBy__c.field-meta.xml
<CustomField>
    <fullName>AVO_PumpVettedBy__c</fullName>
    <label>PumpVettedBy</label>
    <length>80</length>
    <type>Text</type>
</CustomField>