force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Refill__c.field-meta.xml
<CustomField>
    <fullName>AVO_Refill__c</fullName>
    <label>Pond Refill Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stream</fullName>
            </value>
            <value>
                <fullName>Springs</fullName>
            </value>
            <value>
                <fullName>Sinkhole-Wetland</fullName>
            </value>
            <value>
                <fullName>Runoff Only</fullName>
            </value>
            <value>
                <fullName>Pumped SW</fullName>
            </value>
            <value>
                <fullName>Pumped GW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>