force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_September__c.field-meta.xml
<CustomField>
    <fullName>AVO_September__c</fullName>
    <label>September</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>