force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_SourceType__c.field-meta.xml
<CustomField>
    <fullName>AVO_SourceType__c</fullName>
    <label>SW Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shared Impoundment</fullName>
            </value>
            <value>
                <fullName>On Farm Constructed Pond</fullName>
            </value>
            <value>
                <fullName>Natural Lagoon, Wetland, Pond</fullName>
                <label>Natural Lagoon, Wetland Pond</label>
            </value>
            <value>
                <fullName>Sinkhold Pond</fullName>
            </value>
            <value>
                <fullName>Flowing Stream or Canal to such</fullName>
            </value>
            <value>
                <fullName>Springs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>