force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Sub_Area_4__c.field-meta.xml
<CustomField>
    <fullName>AVO_Sub_Area_4__c</fullName>
    <description>Is the well/sw pump in Sub-Area 4?</description>
    <label>Sub-Area 4</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>