force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Surf_Lat__c.field-meta.xml
<CustomField>
    <fullName>AVO_Surf_Lat__c</fullName>
    <label>SW Pump Latitude</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>