force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Surf_Location__c.field-meta.xml
<CustomField>
    <fullName>AVO_Surf_Location__c</fullName>
    <label>Surf_Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>