force-app/main/default/objects/AVO_Withdrawals__c/fields/AVO_Surface_Water_Source__c.field-meta.xml
<CustomField>
    <fullName>AVO_Surface_Water_Source__c</fullName>
    <label>SW Source Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>